fix: add dark mode in tailwind config, some changes in global css and use everywhere custom toast

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -10,8 +10,12 @@
   color-scheme: light;
 }
 
+.dark {
+  --background: #0f172a; /* bg-gray-900 */
+  --foreground: #f1f5f9; /* text-gray-100 */
+}
+
 @media (prefers-color-scheme: dark) {
-  
 }
 
 body {
